# water-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  plain.wasm  proxy.wasm
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/src/v0/: dial.rs  entry.rs  listen.rs  mod.rs  wrap.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: config.rs  connections.rs  decoder.rs  dialer.rs  encoder.rs  lib.rs  listener.rs  tunnel.rs  version.rs
crates/wasm/src/net/: mod.rs  std_sys_net.rs
crates/wasm/src/v1/: async_listener_v1.rs  config_v1.rs  dial_v1.rs
crates/wasm_v0/: Cargo.toml  README.md
crates/wasm_v0/src/: common.rs  error.rs  lib.rs  v0plus.rs
crates/water/: Cargo.toml  README.md
crates/water/examples/cli/: cli.rs  main.rs
crates/water/src/: globals.rs  lib.rs
crates/water/src/config/: mod.rs  wasm_shared_config.rs
crates/water/src/runtime/: client.rs  core.rs  listener.rs  mod.rs  relay.rs  runner.rs  stream.rs  transport.rs  version.rs
crates/water/src/runtime/net/: mod.rs
crates/water/src/runtime/v0/: config.rs  funcs.rs  listener.rs  mod.rs  relay.rs  stream.rs
crates/water/src/runtime/v1/: funcs.rs  listener.rs  mod.rs  stream.rs
crates/water/src/runtime/version_common/: funcs.rs  mod.rs
crates/water/tests/: SS_testing.rs  benchmarking_v0.rs
crates/water/tests/test_data/: config.json
crates/water_wasm/: Cargo.toml
crates/water_wasm/src/: config.rs  connections.rs  decoder.rs  dialer.rs  encoder.rs  lib.rs  listener.rs
crates/water_wasm/src/net/: mod.rs
crates/water_wasm/src/v1/: README.md  async_listener_v1.rs  mod.rs
crates/water_wasm_pt/: Cargo.toml
crates/water_wasm_pt/src/: decoder.rs  dialer.rs  encoder.rs  version.rs
crates/water_wasm_pt/src/v1/: dial_v1.rs
crates/watm/: Cargo.toml
crates/watm/src/: config.rs  decoder.rs
crates/watm_v0/: Cargo.toml
crates/watm_v0/src/: v0plus.rs
examples/clients/cli/: Cargo.toml  README.md
examples/clients/cli/demo_configs/: ss_config.json  v0_listener_config.json  v0_relay_config.json
examples/clients/cli/demo_wasm/: echo_client.wasm  plain.wasm  reverse.wasm  ss_client_wasm.wasm
examples/clients/cli/src/: cli.rs  main.rs
examples/water_bins/: README.md
examples/water_bins/echo_client/: Cargo.toml  README.md  echo_client.wasm  proxy.wasm
examples/water_bins/echo_client/src/: async_socks5_listener.rs  lib.rs
examples/water_bins/echo_client_macro/: Cargo.toml
examples/water_bins/echo_client_macro/src/: async_socks5_listener.rs  lib.rs
examples/water_bins/fallible/: Cargo.toml
examples/water_bins/fallible/src/: failures.rs  lib.rs
examples/water_bins/plain_v0/: Cargo.toml
examples/water_bins/plain_v0/.cargo/: config
examples/water_bins/plain_v0/src/: common.rs  error.rs  lib.rs  v0plus.rs
examples/water_bins/reverse_v0/: Cargo.toml  reverse.wasm
examples/water_bins/reverse_v0/src/: error.rs  lib.rs  v0plus.rs
examples/water_bins/ss_client_wasm_v1/: Cargo.toml  README.md  ss_client_wasm.wasm
examples/water_bins/ss_client_wasm_v1/src/: aead.rs  client.rs  config.rs  crypto_io.rs  lib.rs  socks5.rs  utils.rs  water.rs
scripts/: build_wasm_targets.sh  make_and_opt_wasm.sh
src/: globals.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  sharedconfig.rs
src/runtime/: core.rs  funcs.rs  listener.rs  mod.rs  runner.rs  stream.rs
src/runtime/net/: mod.rs
src/runtime/v0/: funcs.rs
src/runtime/v1/: funcs.rs
src/runtime/version_common/: funcs.rs
tests/: Cargo.toml  benchmarking_v0.rs
tests/benches/: benchmarking_v0.rs
tests/test_data/: config.json
tests/test_wasm/: echo_client.wasm  plain.wasm  proxy.wasm  ss_client_wasm.wasm  ss_patched_client_wasm.wasm
tests/tests/: cross_lang_tests.rs  echo_tests.rs  spinning_relay.rs  ss_testing.rs  transports.rs  v0_plus_relay_tests.rs  v0_plus_tests.rs
tests/tests/transport_constructions/: fn_mut.rs  mod.rs  struct_closure.rs  trait_member.rs
