[package]
name = "WASMable-Transport"
version = "0.1.0"
author = "cerikccc@gmail.com"
edition = "2021"

[lib]
# crate-type = ["cdylib"]
name = "wasmable_transport"
path = "src/lib.rs"

[[bin]]
name = "wasmable_transport"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.7"
tracing = "0.1"
tracing-subscriber = "0.3.17"
clap = { version="4.2.1", features = ["derive"] }
wasmtime = "12.0.1"
wasmtime-wasi = "12.0.1"
wasi-common = "12.0.1"
wasmtime-wasi-threads = "12.0.1"
futures = "0.3"
cap-std = "2.0.0"
libc = "0.2.147"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
toml = "0.7.6"
once_cell = "1.13.0"

bitflags = "2.4.0"

bincode = "1.3"

rustls = "0.20.6"
rustls-pemfile = "1.0.0"
zeroize = { version = "1.5.4", features = ["alloc"] }