
[workspace]
default-members = ["crates/water"]
members = ["crates/*"]
# exclude = ["crates/foo", "path/to/other"]
resolver="2"


[workspace.package]
authors = ["cerikccc@gmail.com", "gaukas", "jmwample", "ewust"]
description = "Water WebAssembly Transport Executor for rust"
edition = "2021"
# documentation = "https://example.com/bar"
