
[workspace]
members = ["crates/*", "examples/water_bins/*", "examples/clients/*"]
# exclude = ["crates/foo", "path/to/other"]
default-members = ["crates/*"]
resolver="2"


[workspace.package]
authors = ["cerikccc@gmail.com", "gaukas", "jmwample", "ewust"]
description = "Water WebAssembly Transport Executor for rust"
edition = "2021"
# documentation = "https://example.com/bar"
