[package]
name = "tests"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false


[dev-dependencies]
water-wasm = { path = "../crates/wasm" }
water = { path = "../crates/water" }

tracing = "0.1"
tracing-subscriber = "0.3.17"
rand = "0.8"
pprof = { version = "0.11.1", features = ["flamegraph", "protobuf-codec", "prost-codec"] }
anyhow = "1.0.7"
