[package]
name = "tests"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false


[dev-dependencies]
water-watm = { path = "../crates/watm" }
water = { path = "../crates/water" }

tracing = "0.1"
tracing-subscriber = "0.3.17"
rand = "0.8"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec", "prost-codec"] }
anyhow = "1.0.7"
shadowsocks-service = {version = "1.17.0", features = ["server"]}
shadowsocks-rust = "1.17.0"
tokio = { version = "1.24.2", features = ["full", "macros"] }
futures = "0.3.28"
tempfile = "3.8.0"
