[package]
name = "water-wasm-crate"
version = "0.1.0"
authors = ["ecec <helloentroppy@gmail.com>"]
description = "A WASM template crate that can be integrated with W.A.T.E.R. library"
edition = "2021"

[lib]
name = "water_wasm_crate"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
tokio = { version = "1.24.2", default-features = false, features = ["net", "rt", "macros", "io-util", "io-std", "time", "sync"] }
tokio-util = { version = "0.7.1", features = ["codec"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3"

anyhow = "1.0.7"
tracing = "0.1"
tracing-subscriber = "0.3.17"
toml = "0.5.9"
lazy_static = "1.4"
url = { version = "2.2.2", features = ["serde"] }
libc = "0.2.147"