[package]
name="cli-dev"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false

[dependencies]
# rand = "0.8"
# pprof = { version = "0.11.1", features = ["flamegraph", "protobuf-codec", "prost-codec"] }
clap = { version="4.2.1", features = ["derive"] }
anyhow = "1.0.7"
tracing = "0.1"
tracing-subscriber = "0.3.17"

water = {path="../../../crates/water", version="0.1.0"}
