[package]
name = "echo-client_macro"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false

[lib]
name = "echo_client_macro"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.24.2", default-features = false, features = ["rt", "macros", "io-util", "time", "sync"] }
tokio-util = { version = "0.7.1", features = ["codec"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3"

anyhow = "1.0.7"
tracing = "0.1"
tracing-subscriber = "0.3.17"
toml = "0.5.9"
lazy_static = "1.4"
url = { version = "2.2.2", features = ["serde"] }
libc = "0.2.147"

# water wasm lib import
water-wasm = { path = "../../../crates/wasm/", version = "0.1.0" }
