[package]
name = "reverse"
version = "0.2.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false

[lib]
name = "reverse"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", default-features = false, features = ["fs", "net", "rt", "macros", "io-util", "io-std", "time", "sync"] }

tracing = "0.1"
tracing-subscriber = "0.3.17"

# water wasm lib import
water-watm-v0 = { path = "../../../crates/watm_v0/", version = "0.1.0" }