[package]
name = "ss-client-wasm"
version = "0.5.2"
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = false

[lib]
name = "ss_client_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
shadowsocks-crypto = "0.5.1"

# ============== WATER import below
tokio = { version = "1.24.2", default-features = false, features = ["net", "rt", "macros", "io-util", "io-std", "time", "sync"] }
tokio-util = { version = "0.7.1", features = ["codec"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3"

anyhow = "1.0.7"
tracing = "0.1"
tracing-subscriber = "0.3.17"
toml = "0.5.9"
lazy_static = "1.4"
url = { version = "2.2.2", features = ["serde"] }
libc = "0.2.147"

thiserror = "1.0.49"
byte_string = "1.0.0"
bytes = "1.3"

futures = "0.3.28"
pin-project = "1.1.2"

# water wasm lib import
water-wasm = { path = "../../../crates/wasm/", version = "0.1.0" }
